--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   	<!-- Mobile Specific Meta -->
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  	<link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@200,300,400,500,600,700,1&display=swap" rel="stylesheet">
+
   	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
   	<link rel="stylesheet" href="assets/css/fontawesome.min.css">
   	<link rel="stylesheet" href="assets/css/flaticon.css">
   	<link rel="stylesheet" href="assets/css/animate.css">
   	<link rel="stylesheet" href="assets/css/swiper.min.css">
-  	<link rel="stylesheet" href="assets/css/jquery-ui.css">
+  	<link rel="stylesheet" href="assets/css/jquery-ui.css"> 
   	<link rel="stylesheet" href="assets/css/magnific-popup.css">
   	<link rel="stylesheet" href="assets/css/style.css">
   </head>
@@ -26,6 +26,31 @@
 <!-- Start of Header section
 	============================================= --> 
 	<header id="vt-header" class="vt-header-section header_style_one">
+        <div class="header-top-area">
+            <div class="container">
+                <div class="header-top d-flex justify-content-between">
+                    <div class="top-cta d-flex align-items-center">
+                        <i class="far fa-phone"></i> <span>Have any questions? Free: <a href="#">+1 917 2658444</a></span>
+                    </div>
+                    <div class="top-action d-flex align-items-center">
+                        <div class="header-search">
+                            <form action="#">
+                                <input type="text" name="search" placeholder="Search...">
+                            </form>
+                        </div>
+                        <div class="action-text">
+                            <a href="#"><span>Join Us</span> to shape the future <i class="far fa-arrow-right"></i></a>
+                        </div>
+                        <div class="action-social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-dribbble"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
  <!-- Start of Header section
     ============================================= -->       
