--- a/index.html
+++ b/index.html
@@ -51,9 +51,115 @@
                 </div>
             </div>
         </div>
+        <div class="vt-header-navigation-content">
+            <div class="container">
+                <div class="vt-header-navigation d-flex align-items-center justify-content-between">
+                    <div class="brand-logo">
+                        <a href="#"><img src="assets/img/logo/logo-1.svg" alt=""></a>
+                    </div>
+                    <div class="main-navigation-cta d-flex align-items-center ">
+                        <nav class="main-navigation clearfix ul-li">
+                            <ul id="main-nav" class="nav navbar-nav clearfix">
+                                <li class="dropdown active">
+                                    <a href="!#">Home</a>
+                                    <ul class="dropdown-menu clearfix">
+                                        <li><a class="active" href="index.html">Corporate Business</a></li>
+                                        <li><a href="index-2.html">Corporate Business Dark</a></li>
+                                        <li><a href="index-3.html">Corporate Business Modern</a></li>
+                                        <li><a href="index-4.html">Trendy Business</a></li>
+                                        <li><a href="index-5.html">Business Classic</a></li>
+                                        <li><a href="index-6.html">Business Consulting</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="about.html">Solutions</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li class="dropdown">
+                                    <a href="!#">Pages</a>
+                                    <ul class="dropdown-menu clearfix">
+                                        <li><a href="service.html">Services</a></li>
+                                        <li class="dropdown">
+                                            <a href="service-single.html">Services Details</a>
+                                            <ul class="dropdown-menu clearfix">
+                                                <li><a href="service-single.html">Construction </a></li>
+                                                <li><a href="service-single-2.html">Architect Design</a></li>
+                                                <li><a href="service-single-3.html">Interior Design</a></li>
+                                                <li><a href="service-single-4.html">3D Animation</a></li>
+                                                <li><a href="service-single-5.html">House Renovation</a></li>
+                                                <li><a href="service-single-6.html">Ideas & Inspiration</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="team.html">Team Page</a></li>
+                                        <li class="dropdown">
+                                            <a href="service-single.html">Blog</a>
+                                            <ul class="dropdown-menu clearfix">
+                                                <li><a href="service-single.html">Construction</a></li>
+                                                <li><a href="service-single-2.html">Architect Design</a></li>
+                                                <li><a href="service-single-3.html">Interior Design</a></li>
+                                                <li><a href="service-single-4.html">3D Animation</a></li>
+                                                <li><a href="service-single-5.html">House Renovation</a></li>
+                                                <li><a href="service-single-6.html">Ideas & Inspiration</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="faq.html">FAQ Page</a></li>
+                                        <li><a href="pricing.html">Pricing Page</a></li>
+                                        <li><a href="testimonial.html">Testimonial Page</a></li>
+                                        <li><a href="contact.html">Contact Page</a></li>
+                                        <li><a href="booking.html">Booking Page</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="!#">Shop</a>
+                                    <ul class="dropdown-menu clearfix"> 
+                                        <li><a href="shop.html">Shop Page </a></li>
+                                        <li><a href="shop-single.html">Shop Details</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="about.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                        <div class="header-cta-btn">
+                            <a href="#">Free Consultation</a>
+                        </div>
+                        <div class="off-canvas-btn d-flex align-items-center justify-content-center">
+                            <button class="canvas-trigger">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
- <!-- Start of Header section
-    ============================================= -->       
+<!-- Start of Header section
+    ============================================= -->
+   
+<!-- Start of Banner section
+    ============================================= -->
+    <section id="vt-banner" class="vt-banner-section">
+        <div class="container">
+            <div class="vt-banner-text headline pera-content">
+                <div class="banner-slug">
+                    Experience Creative Freedom
+                </div>
+                <h1 class="banner_title">Transforming Businesses with Expertise.</h1>
+                <p>Our consulting service drives growth, enhances efficiency, and transforms businesses for lasting success.</p>
+                <div class="vt-btn text-capitalize">
+                    <a href="#">Browse All Services</a>
+                </div>
+            </div>
+        </div>
+    </section> 
+<!-- End of Banner section
+    ============================================= -->         
+
 
 
     <!-- For Js Library -->
