--- a/index.html
+++ b/index.html
@@ -140,10 +140,35 @@
     </header>
 <!-- Start of Header section
     ============================================= -->
-   
+    
 <!-- Start of Banner section
     ============================================= -->
-    <section id="vt-banner" class="vt-banner-section">
+    <section id="vt-banner" class="vt-banner-section item-view position-relative">
+        <div class="vt-banner-shape">
+            <svg width="711" height="781" viewBox="0 0 711 781" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g style="mix-blend-mode:overlay" filter="url(#filter0_f_267_3604)">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M604.181 482.15V321.823L742.645 401.847L604.181 482.15ZM742.645 401.847L815.837 444.172L817.589 445.188V1016.92L815.837 1017.93L604.181 895.549V566.555V482.151L742.645 401.847Z" fill="#FFC410"/>
+                    <path d="M529.52 687.71L251.119 525.21L34.2422 647.208L527.768 935.209L529.52 934.228L744.61 813.246L529.52 687.71Z" fill="#F3136B"/>
+                    <path d="M533.305 32L249.999 196.322L35.3643 320.807V321.613L247.861 443.19L249.999 441.929L746.153 154.208V153.787L533.305 32Z" fill="#9747FF"/>
+                    <path d="M742.648 401.846L746.151 399.814V154.207L249.998 441.928V444.415V687.499L250.068 687.534L461.058 565.186L604.183 482.15V321.822L742.648 401.846Z" fill="#63C0AD"/>
+                    <path d="M249.999 441.928L247.861 443.19L35.3643 321.612V564.697V566.413L36.8708 565.538L249.999 687.5V444.416V441.928Z" fill="#FFC410"/>
+                    <path d="M250.047 687.526L249.998 687.501V687.551L250.047 687.526Z" fill="#FE9F5C"/>
+                    <path d="M34.6631 321.193L35.3645 321.614V320.808L34.6631 321.193Z" fill="#FE9F5C"/>
+                    <path d="M527.768 935.209L34.2424 647.208L32 648.469V891.133L313.765 1055.59L528.329 1180.82L529.52 1180.15V936.225L527.768 935.209Z" fill="#82027D"/>
+                    <path d="M817.589 197.233L815.837 196.217L604.181 318.565V321.823L815.837 444.171L817.589 443.155L1030.26 320.211L817.589 197.233Z" fill="#FE7316"/>
+                </g>
+                <defs>
+                    <filter id="filter0_f_267_3604" x="0" y="0" width="1063" height="1212.82" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                        <feGaussianBlur stdDeviation="16" result="effect1_foregroundBlur_267_3604"/>
+                    </filter>
+                </defs>
+            </svg>
+        </div>
+        <div class="bt-banner-img position-absolute">
+            <img src="assets/img/bg/hero-1.jpg" alt="">
+        </div>
         <div class="container">
             <div class="vt-banner-text headline pera-content">
                 <div class="banner-slug">
@@ -156,9 +181,24 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>    
 <!-- End of Banner section
-    ============================================= -->         
+    ============================================= -->
+
+<!-- Start of Service section
+    ============================================= -->
+    <section id="vt-service" class="vt-service-section pt-120 pb-90">
+        <div class="container">
+            <div class="vt-section-title headline pera-content">
+                <div class="subtitle">
+                    Industries we serve
+                </div>
+                <h2 class="section_title">We offer expert consulting for strategic growth and operational excellence solutions.</h2>
+            </div>
+        </div>
+    </section>             
+<!-- End of Service section
+    ============================================= -->    
 
 
 
