--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 		<div class="container">
 			<div class="vt-section-title headline text-center pera-content">
 				<div class="subtitle">
-					Our Corporate Clients'
+					Our Corporate Clients
 				</div>
 				<h2 class="section_title">Satisfied clients from 170+ organisations in different fields</h2>
 			</div>
@@ -618,6 +618,156 @@
 		</div>
 	</section>		
 <!-- End of Service section
+	============================================= -->
+
+<!-- Start of Testimonial section
+	============================================= -->
+	<section id="vt-testimonial" class="vt-testimonial-section pt-120 pb-120">
+		<div class="vt-section-title headline text-center pera-content">
+			<div class="subtitle">
+				Client Testimonials
+			</div>
+			<h2 class="section_title">Clients Share Their Success Stories</h2>
+		</div>
+		<div class="vt-testimonial-content mt-50 position-relative">
+			<div class="vt-testimonial-slider swiper-container">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="vt-testimonial-item ul-li headline pera-content">
+							<ul>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+							</ul>
+							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<div class="vt-testimonial-author d-flex align-items-center">
+								<div class="item-img">
+									<img src="assets/img/about/test1.jpg" alt="">
+								</div>
+								<div class="item-text">
+									<h3>Cameron Williamson</h3>
+									<span>Marketing Director</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="vt-testimonial-item ul-li headline pera-content">
+							<ul>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+							</ul>
+							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<div class="vt-testimonial-author d-flex align-items-center">
+								<div class="item-img">
+									<img src="assets/img/about/test2.jpg" alt="">
+								</div>
+								<div class="item-text">
+									<h3>Marvin McKinney</h3>
+									<span>Marketing Director</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="vt-testimonial-item ul-li headline pera-content">
+							<ul>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+							</ul>
+							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<div class="vt-testimonial-author d-flex align-items-center">
+								<div class="item-img">
+									<img src="assets/img/about/test3.jpg" alt="">
+								</div>
+								<div class="item-text">
+									<h3>Albert Flores</h3>
+									<span>Marketing Director</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="vt-testimonial-item ul-li headline pera-content">
+							<ul>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+							</ul>
+							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<div class="vt-testimonial-author d-flex align-items-center">
+								<div class="item-img">
+									<img src="assets/img/about/test1.jpg" alt="">
+								</div>
+								<div class="item-text">
+									<h3>Cameron Williamson</h3>
+									<span>Marketing Director</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="vt-testimonial-item ul-li headline pera-content">
+							<ul>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+							</ul>
+							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<div class="vt-testimonial-author d-flex align-items-center">
+								<div class="item-img">
+									<img src="assets/img/about/test2.jpg" alt="">
+								</div>
+								<div class="item-text">
+									<h3>Marvin McKinney</h3>
+									<span>Marketing Director</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="vt-testimonial-item ul-li headline pera-content">
+							<ul>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+								<li><i class="fas fa-star"></i></li>
+							</ul>
+							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<div class="vt-testimonial-author d-flex align-items-center">
+								<div class="item-img">
+									<img src="assets/img/about/test3.jpg" alt="">
+								</div>
+								<div class="item-text">
+									<h3>Albert Flores</h3>
+									<span>Marketing Director</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="vt-testi-pagination text-center mt-30"></div>
+			<div class="vt-testi-slider-nav  d-flex align-items-center justify-content-center">
+				<div class="vt-testi-prev d-flex align-items-center justify-content-center"><i class="fal fa-chevron-left"></i></div>
+				<div class="vt-testi-next d-flex align-items-center justify-content-center"><i class="fal fa-chevron-right"></i></div>
+			</div>
+		</div>
+	</section>		
+<!-- End of Testimonial section
 	============================================= -->	
 
 
@@ -695,6 +845,55 @@
 					},
 					'992': {
 						slidesPerView: 3,
+					},
+					'768': {
+						slidesPerView: 2,
+					},
+					'767': {
+						slidesPerView: 2 ,
+					},
+					'576': {
+						slidesPerView: 1,
+					},
+					'480': {
+						slidesPerView: 1,
+					},
+					'0': {
+						slidesPerView: 1,
+					},
+				},
+			});
+		};
+	</script>
+	<script>
+		if ($('.vt-testimonial-slider').length > 0 ) {
+			var swiper2 = new Swiper(".vt-testimonial-slider", {
+				slidesPerView: 3,
+				loop: true,
+				spaceBetween: 32,
+				roundLengths: true,
+				centeredSlides: true,
+				speed: 1000,
+				navigation: {
+					nextEl: ".vt-testi-next",
+					prevEl: ".vt-testi-prev",
+				},
+				pagination: {
+					el: ".vt-testi-pagination",
+					clickable: true,
+				},
+				breakpoints: {  
+					'1400': {
+						slidesPerView: 3,
+					},
+					'1300': {
+						slidesPerView: 3,
+					},
+					'1200': {
+						slidesPerView: 3,
+					},
+					'992': {
+						slidesPerView: 2,
 					},
 					'768': {
 						slidesPerView: 2,
