--- a/index.html
+++ b/index.html
@@ -838,6 +838,85 @@
 		</div>
 	</section>		
 <!-- End of Why choose Us section
+	============================================= -->
+
+<!-- Start of Blog  section
+	============================================= -->
+	<section id="vt-blog" class="vt-blog-section pb-120 pt-120">
+		<div class="container">
+			<div class="vt-section-title headline pera-content">
+				<div class="subtitle">
+					News & Blogs
+				</div>
+				<h2 class="section_title">Press Releases Drive Success</h2>
+			</div>
+			<div class="vt-blog-content pt-50 justify-content-center">
+				<div class="row">
+					<div class="col-lg-4 col-md-6">
+						<div class="vt-blog-item">
+							<div class="item-img">
+								<img src="assets/img/blog/blg1.jpg" alt="">
+							</div>
+							<div class="item-text headline">
+								<div class="item-tag">
+									<a href="#"><span>Corporate News</span></a>
+									<a href="#"><span>July 22, 2024</span></a>
+								</div>
+								<h3 class="blog_title href-underline"><a href="#">Global Corporation Achieves Record-Breaking Quarterly Profits</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="vt-blog-item">
+							<div class="item-img">
+								<img src="assets/img/blog/blg2.jpg" alt="">
+							</div>
+							<div class="item-text headline">
+								<div class="item-tag">
+									<a href="#"><span>Business News</span></a>
+									<a href="#"><span>July 22, 2024</span></a>
+								</div>
+								<h3 class="blog_title href-underline"><a href="#">Innovative Startups Transforming Corporate Business Landscape</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="vt-blog-item">
+							<div class="item-img">
+								<img src="assets/img/blog/blg3.jpg" alt="">
+							</div>
+							<div class="item-text headline">
+								<div class="item-tag">
+									<a href="#"><span>News</span></a>
+									<a href="#"><span>July 22, 2024</span></a>
+								</div>
+								<h3 class="blog_title href-underline"><a href="#">Leading Firm Expands Operations into New Markets</a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="vt-btn mt-45 text-capitalize text-center">
+					<a href="#">Browse All News</a>
+				</div>
+			</div>
+		</div>
+	</section>		
+<!-- End of Blog section
+	============================================= -->
+
+<!-- Start of Faq  section
+	============================================= -->
+	<section id="vt-faq" class="vt-faq-section">
+		<div class="container">
+			<div class="vt-section-title headline text-center pera-content">
+				<div class="subtitle">
+					Frequently Asked Questions
+				</div>
+				<h2 class="section_title">Answers to Common Corporate Business Questions</h2>
+			</div>
+		</div>
+	</section>		
+<!-- End of Faq  section
 	============================================= -->	
 
 
